Bug 33756 - CALC crashes after shrinking a selection containing a hidden column
Summary: CALC crashes after shrinking a selection containing a hidden column
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) Windows (All)
: high critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4 target:3.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-31 05:33 UTC by Felix
Modified: 2011-03-03 16:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix 2011-01-31 05:33:05 UTC
OS: Windows XP Professional Version 2002 SP2
HW: Intel Core2 Duo CPU E6750, Asus P5KC motherboard, 4 GB RAM
App: LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4
Custom install with only English and Hungarian dictionaries/language packs

How to reproduce the crash:
Here is my table, containing data only in A1-C1 (I show the headings as well):
  A B C
1 1 2 3
Hide the B column. Now it looks like:
  A C
1 1 3
Then make A1 active and press Ctrl+Shift+Right-Arrow to select A1..C1. (It is already buggy here, because instead of selecting A1..C1, it selects A1..D1, apparently the hidden column confuses Calc!) Then Ctrl+Shift+Left-Arrow to shrink selection to A1..C1, then again Ctrl+Shift+Left-Arrow to CRASH!!!
Comment 1 Kohei Yoshida 2011-01-31 07:01:31 UTC
Excellent reproducibility.

I'm taking this.
Comment 2 Kohei Yoshida 2011-02-11 11:51:35 UTC
I'm too swamped to even look into this for 3.3.1.  Re-targeting to 3.4.
Comment 3 Kohei Yoshida 2011-02-11 17:45:10 UTC
Fixed on master.
Comment 4 Kohei Yoshida 2011-03-03 16:22:55 UTC
Backported the fix to 3.3.2.