Fixed incorrect cursor navigation. (fdo#33756)

Block selection with keyboard was incorrect when the selected range
included hidden cells.  This also fixes one crasher on block
selection during formula reference mode i.e. type '=SUM(' and select
range via keyboard afterward.